test/errors/expecting_new_indentation_level.dmd
function add(a, b)
return a + b

--- Output
Expecting new indentation level

1| function add(a, b)
2| return a + b
   ^
---